--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@supabase/supabase-js": "^2.50.0",
     "next": "15.3.3",
     "pg": "^8.16.0",
     "react": "^19.0.0",
