--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -28,14 +28,13 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+        GOOGLE_API_KEY: ${{ secrets.SuperSecret }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Create .env.local
-        run: |
-          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> .env.local
-          echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.local
-          
+     
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
