modify nextjs workflow added db secret in yml moded 3

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,7 +29,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-        GOOGLE_API_KEY: ${{ secrets.SuperSecret }}
+        NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }} 
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
